# evaluator2

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
include/: JsonParser.hpp
include/evaluator/: AST.h  Context.h  EvalDefs.h  InternalFunc.h  InternalFunc.inl  Operators.inl  Parser.h  Tokenizer.h
src/: AST.cpp  CMakeLists.txt  Context.cpp  InternalFunc.cpp  Parser.cpp  Tokenizer.cpp
